kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-graphql
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
  selector:
    app: k8s-graphql
