kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: k8s-graphql
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/security-groups: sg-0d6314265d6ad7f7c
    alb.ingress.kubernetes.io/healthcheck-path: /.well-known/apollo/server-health
  labels:
    app: k8s-graphql
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: k8s-graphql
              servicePort: 80
